gap fixes

--- a/React/travel-journal/src/App.css
+++ b/React/travel-journal/src/App.css
@@ -63,7 +63,7 @@ main section:last-child {
 .section--desc {
   display: flex;
   flex-direction: column;
-  gap: 9px;
+  gap: 12px;
   padding: 0 19px;
 }
 
